--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-cli-route-context",
+  "name": "ember-cli-route-model-params",
   "version": "0.0.0",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
@@ -18,6 +18,7 @@
     "test": "ember try:each"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "ember-cli-babel": "^6.6.0"
   },
   "devDependencies": {
